# cppMTI3

./: CMakeLists.txt  README.md  Xbus.cpp  Xbus.h  cppMTi3.cpp  cppMTi3.h  cppPrintOutputConfigurationMTi3.cpp  cppReadLogMTi3.cpp  cppReadMTi3.cpp  cppSetMagLoggingOutputMTi3.cpp  cppSetMeasurementOutputMTi3.cpp
